Update greeting and user in index.html

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>¡Hola! Pipeline funcionando correctamente</h1>
+        <h1>Pipeline funciona</h1>
         <p>Esta aplicación fue construida por Jenkins y desplegada por Ansible.</p>
-        <p>Usuario: <strong>dmset</strong></p>
+        <p>Usuario: <strong>MartinUTT</strong></p>
     </div>
 </body>
 </html>
